# linux-mtds

./: README.md
example/: CMakeLists.txt
example/src/: MtdsHal.h  MyDisp.h  MyDispDemo1.cpp  main.cpp  mtds.cpp
libmtds/: CMakeLists.txt
libmtds/src/: MtdsHal.cpp  MtdsHal.h  MyDisp.cpp  MyDispDemo1.cpp  xil_io.h  xil_types.h  xparameters.h  xstatus.h
mtds/: Makefile  mtds_drv.c  mtds_drv.h  mtds_hal.c  mtds_hal.h  proto_defs.h  xparameters.h  xspi.c  xspi.h  xspi_i.h  xspi_l.h  xspi_options.c
